--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -8,38 +8,23 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a [routerLink]="['']" class="nav-link" >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a (click)="goToMen()" class="nav-link pointer-cursor">Men</a>
+        <a [routerLink]="['/app-men']" class="nav-link pointer-cursor">Men</a>
       </li>
       <li class="nav-item">
-        <a (click)="goToMen()" class="nav-link pointer-cursor">Women</a>
+        <a [routerLink]="['/app-women']" class="nav-link pointer-cursor">Women</a>
       </li>
       <li class="nav-item">
-        <a (click)="goToAboutUs()" class="nav-link pointer-cursor">About Us</a>
+        <a [routerLink]="['/about-us']" class="nav-link pointer-cursor">About Us</a>
       </li>
       <li class="nav-item">
-        <a (click)="goToLogin()" class="nav-link pointer-cursor">Login</a>
+        <a [routerLink]="['/login']" class="nav-link pointer-cursor">Login</a>
       </li>
       <li class="nav-item">
-        <a (click)="goToCart()" class="nav-link pointer-cursor">Edit Database</a>
+        <a [routerLink]="['/app-cart']" class="nav-link pointer-cursor">Edit Database</a>
       </li>
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> -->
-      <!-- <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> -->
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
