--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -1,10 +1,13 @@
- <!-- Site footer -->
- <footer class="site-footer">
+<!-- Site footer -->
+<footer class="site-footer">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <h6>OnlyPhans</h6>
-        <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+        <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative to help the upcoming
+          programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code
+          wants to be simple. We will help programmers build up concepts in different programming languages that include
+          C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
       </div>
 
       <div class="col-xs-6 col-md-3">
@@ -35,17 +38,19 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-sm-6 col-xs-12">
-        <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
-     <a href="#">PhanBoys</a>.
+        <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by
+          <a href="#">PhanBoys</a>.
         </p>
       </div>
 
       <div class="col-md-4 col-sm-6 col-xs-12">
         <ul class="social-icons">
-          <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <!-- <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
           <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>    -->
         </ul>
       </div>
     </div>
