--- a/src/app/women/women.component.html
+++ b/src/app/women/women.component.html
@@ -1,3 +1,126 @@
-<p>
-  women works!
-</p>
+<div class="main-container">
+  <div class="three-row-body">
+
+    <app-main-nav></app-main-nav>
+
+
+    <div class="women-page2">
+
+      <div>
+        <img src="../../assets/women-banner.jpg">
+        <div class="text-container">
+          <h1>Shop all women's clothing</h1>
+        </div>
+      </div>
+
+      <div class="women-page">
+        <div class="women-nav">
+          <ul>
+            <li><a [routerLink]="" (click)="filter-shirts()">Shirts</a></li>
+            <li><a [routerLink]="" (click)="filter-pants()">Pants</a></li>
+            <li><a [routerLink]="" (click)="filter-jackets()">Jackets</a></li>
+            <li><a [routerLink]="" (click)="filter-shorts()">Shorts</a></li>
+            <li><a [routerLink]="" (click)="filter-shoes()">Shoes</a></li>
+            <li><a [routerLink]="" (click)="filter-bags()">Backpack and Bags</a></li>
+            <li><a [routerLink]="" (click)="filter-acc()">Accesories</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h2>Filters</h2>
+          <div class="filter-grid">
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Size
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">XS</a>
+                <a class="dropdown-item" href="#">Small</a>
+                <a class="dropdown-item" href="#">Medium action</a>
+                <a class="dropdown-item" href="#">Large</a>
+                <a class="dropdown-item" href="#">XL</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Price
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Under $50</a>
+                <a class="dropdown-item" href="#">Under $100</a>
+                <a class="dropdown-item" href="#">Under $200</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Color
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#"><i class="dot red"></i>Red</a>
+                <a class="dropdown-item" href="#"><i class="dot yellow"></i>Yellow</a>
+                <a class="dropdown-item" href="#"><i class="dot blue"></i>Blue</a>
+                <a class="dropdown-item" href="#"><i class="dot green"></i>Green</a>
+                <a class="dropdown-item" href="#"><i class="dot black"></i>Black</a>
+                <a class="dropdown-item" href="#"><i class="dot white"></i>White</a>
+                <a class="dropdown-item" href="#"><i class="dot pink"></i>Pink</a>
+                <a class="dropdown-item" href="#"><i class="dot grey"></i>Grey</a>
+                <a class="dropdown-item" href="#"><i class="dot purple"></i>Purple</a>
+                <a class="dropdown-item" href="#"><i class="dot orange"></i>Orange</a>
+
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Category
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Shirts</a>
+                <a class="dropdown-item" href="#">Pants</a>
+                <a class="dropdown-item" href="#">Jackets</a>
+                <a class="dropdown-item" href="#">Shorts</a>
+                <a class="dropdown-item" href="#">Shoes</a>
+                <a class="dropdown-item" href="#">Backpack and Bags</a>
+                <a class="dropdown-item" href="#">Accesories</a>
+
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div class="women-card" (click)="goToItem()">
+            <div>
+              <img class="img-fit pointer" src="../../assets/women-card1.jpg">
+              <h3 class="pointer">The Air Crew Tee</h3>
+              <a href="#">$30.00</a>
+            </div>
+            <div>
+              <img class="img-fit pointer" src="../../assets/women-card1.jpg">
+              <h3 class="pointer">The Air Crew Tee</h3>
+              <a href="#">$30.00</a>
+            </div>
+            <div>
+              <img class="img-fit pointer" src="../../assets/women-card1.jpg">
+              <h3 class="pointer">The Air Crew Tee</h3>
+              <a href="#">$30.00</a>
+            </div>
+            <div>
+              <img class="img-fit pointer" src="../../assets/women-card1.jpg">
+              <h3 class="pointer">The Air Crew Tee</h3>
+              <a href="#">$30.00</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+    
+
+    <app-main-footer></app-main-footer>
+
+  </div>
+</div>
+<router-outlet></router-outlet>
