--- a/src/app/women/women.component.css
+++ b/src/app/women/women.component.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-    color: white;
+    color: #4ECDC4;
     font-size: 70px;
     font-weight: bold;
     letter-spacing: 2px;
@@ -39,14 +39,15 @@ hr {
 }
 
 a {
-  color: #8F9092;
+  color: #FF6B6B;
   letter-spacing: 1px;
   text-decoration: none;
   display: block;
   text-align: left;
+  font-weight: 600;
 }
 a:hover {
-  color: rgb(78, 78, 78);
+  color: #4ECDC4;
 }
 
 
