--- a/src/app/women/women.component.css
+++ b/src/app/women/women.component.css
@@ -52,13 +52,25 @@ a:hover {
 
 
 .women-card {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(3, 350px);
   justify-items: center;
   text-align: center;
   grid-column-gap: 1em;
   grid-row-gap: 1em;
+  margin: 30px 0px; */
+  display: grid;
+  grid-template-columns: repeat(3, minmax(350px, 1fr));
+  justify-items: center;
+  text-align: center;
+  grid-column-gap: 1em;
+  grid-row-gap: 4em;
   margin: 30px 0px;
+  margin-right: 50px;
+  grid-auto-rows: minmax(1fr, 1fr);
+}
+.card-tall {
+  grid-row: span 2 / auto;
 }
 
 .img-fit {
