--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a [routerLink]="['']" class="nav-link" >Home <span class="sr-only">(current)</span></a>
+        <a [routerLink]="['']" class="nav-link">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a [routerLink]="['/app-men']" class="nav-link pointer-cursor">Men</a>
@@ -24,6 +24,9 @@
       </li>
       <li class="nav-item">
         <a [routerLink]="['/app-cart']" class="nav-link pointer-cursor">Edit Database</a>
+      </li>
+      <li class="nav-item">
+        <a [routerLink]="['/app-shopping-cart']" class="nav-link pointer-cursor">Shopping Cart</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
