--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -17,9 +17,9 @@
   <li class="nav-item">
     <button mat-raised-button color="primary" (click)="refresh()">Get Clothings</button>
     </li>
-  <!-- <li class="nav-item">
-    <button mat-raised-button color="primary" (click)="getClothingByColor()">Pink</button>
-  </li> -->
+  <li class="nav-item">
+    <button mat-raised-button color="primary" (click)="getClothings()">Pink</button>
+  </li>
   <li class="nav-item">
     <a [routerLink]="'/app-store'">Edit Inventory</a> 
   </li>
