--- a/src/app/men/men.component.css
+++ b/src/app/men/men.component.css
@@ -60,7 +60,7 @@ a:hover {
   grid-row-gap: 4em;
   margin: 30px 0px;
   margin-right: 50px;
-  grid-auto-rows: minmax(1fr, 1fr);
+  /* grid-auto-rows: minmax(1fr, 1fr); */
 }
 .card-tall {
   grid-row: span 2 / auto;
@@ -71,6 +71,8 @@ a:hover {
   width: 100%;
   object-fit: cover;
   padding-bottom: 10px;
+  width: 350px;
+  height: 350px;
 }
 
 .men-page {
