--- a/src/app/women/women.component.css
+++ b/src/app/women/women.component.css
@@ -67,7 +67,7 @@ a:hover {
   grid-row-gap: 4em;
   margin: 30px 0px;
   margin-right: 50px;
-  grid-auto-rows: minmax(1fr, 1fr);
+  /* grid-auto-rows: minmax(1fr, 1fr); */
 }
 .card-tall {
   grid-row: span 2 / auto;
@@ -77,6 +77,8 @@ a:hover {
   width: 100%;
   object-fit: cover;
   padding-bottom: 10px;
+  height: 350px;
+  width: 350px;
 }
 
 .women-page {
