database page error

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -15,7 +15,7 @@
     <button mat-raised-button color="primary" (click)="showCars()">Get Cars</button>
   </li> -->
   <li class="nav-item">
-    <button mat-raised-button color="primary" (click)="refresh()">Get Clothings</button>
+    <button mat-raised-button color="primary" (click)="refresh">Get Clothings</button>
     </li>
   <!-- <li class="nav-item">
     <button mat-raised-button color="primary" (click)="getClothingByColor()">Pink</button>
